# GreenLizard

./: .editorconfig  .gitignore  CMakeLists.txt  Doxyfile  README.md
src/: CMakeLists.txt
src/GreenLizard/: CMakeLists.txt  README.md
src/GreenLizard.IO/: CMakeLists.txt
src/GreenLizard.IO.Pipes/: CMakeLists.txt
src/GreenLizard.IO.Pipes/include/GreenLizard/IO/Pipes/: NamedPipeClientStream.hpp
src/GreenLizard.IO.Pipes/src/: NamedPipeClientStream.cpp
src/GreenLizard.IO/include/GreenLizard/IO/: IStream.hpp
src/GreenLizard.IO/include/GreenLizard/IO/Pipes/: NamedPipeClientStream.hpp
src/GreenLizard.IO/src/Pipes/: NamedPipeClientStream.cpp
src/GreenLizard.Win32/: CMakeLists.txt
src/GreenLizard.Win32/include/GreenLizard/Win32/: Registry.hpp  RegistryKey.hpp  RegistryTypes.hpp  RegistryValue.hpp
src/GreenLizard.Win32/src/: RegistryKey.cpp  RegistryValue.cpp
src/GreenLizard/include/GreenLizard/: Environment.hpp  Exception.hpp  Flags.hpp  GreenLizard.hpp  Numeric.hpp  Ref.hpp  String.hpp  glizard.hpp
src/GreenLizard/src/: Encoding.hpp  Exception.cpp  String.cpp
tests/: CMakeLists.txt
tests/GreenLizard.IO.Pipes.Tests/: CMakeLists.txt  test_NamedPipes.cpp
tests/GreenLizard.IO.Tests/: CMakeLists.txt
tests/GreenLizard.IO.Tests/Pipes/: test_NamedPipes.cpp
tests/GreenLizard.Tests/: CMakeLists.txt  test_Environment.cpp  test_Exception.cpp  test_Flags.cpp  test_Numeric.cpp  test_String.cpp  test_bla.cpp
tests/GreenLizard.Win32.Tests/: CMakeLists.txt  test_Registry.cpp
